--- a/R/Silicosis_diagnostic_rule.qmd
+++ b/R/Silicosis_diagnostic_rule.qmd
@@ -25,15 +25,13 @@ editor: source
 
 # Summary
 
-**Introduction**: A diagnostic prediction model to rule out pneumoconiosis in Dutch construction workers was developed and published in 2007. The diagnostic rule identifies workers at high risk of pneumoconiosis who are referred for medical examination and diagnostic imaging with chest X-ray (CXR). Recently, concerns have been raised about the poor diagnostic performance of CXR compared to high resolution computed tomography (HRCT) for the diagnosis of silicosis, especially for detecting early cases. With the ultimate intention of deciding if the diagnostic prediction rule should be incorporated into a health surveillance program for silicosis, this work provides an overview of the diagnostic prediction rule and estimates the extent, impact, and implications of outcome misclassification from its use.
+**Introduction**: A diagnostic prediction model to rule out pneumoconiosis in Dutch construction workers was developed and published in 2007. The diagnostic rule identifies workers at high risk of pneumoconiosis who are referred for medical examination and diagnostic imaging with chest X-ray (CXR). Recently, concerns have been raised about the poor diagnostic performance of CXR compared to high resolution computed tomography (HRCT) for the diagnosis of silicosis, especially for detecting early cases. With the ultimate intention of recommending whether the diagnostic prediction rule should be incorporated into a health surveillance program for silicosis, this work provides an overview of the diagnostic prediction rule and estimates the extent, impact, and implications of outcome misclassification from its use.
 
-**Methods**: References citing the original diagnostic rule study were retrieved to scope for external validation studies. Data were simulated to replicate the summary characteristics and outcome probability of the original diagnostic rule development study. A total of 5000 samples were used to estimate the potential impact of outcome misclassification over the diagnostic rule's accuracy, by using recent false positive rates (FPR and FNR) of CXR (index test) compared to HRCT (reference test), to estimate the adjusted area under the curve (AUC) assuming non-differential outcome misclassification. Simulated observations were categorized into low (<5 points) and high (≥5 points) risk categories according to the pneumoconiosis diagnostic rule scoring system. The true outcome that would have been observed had HRCT been performed was obtained with a reverse-misclassification function using diagnostic performance estimates. Lastly, projections of the number of cases that could be missed are made by extrapolating to the current number of employees in the construction industry in the Netherlands. Best and worse-case scenarios are simulated by varying diagnostic performance parameters of CXR against HRCT within the uncertainty boundaries of 95% confidence intervals (95%CI). 
+**Methods**: Data were simulated to replicate the summary characteristics and outcome probability of the original diagnostic rule development study. A total of 5000 samples were used to estimate the potential impact of outcome misclassification over the diagnostic rule's accuracy, by using recent false positive and negative rates (FPR and FNR) of CXR (index test) compared to HRCT (reference test), to estimate the adjusted area under the curve (AUC) assuming non-differential outcome misclassification. Simulated observations were categorized into low (\<5 points) and high (>=5 points) risk categories according to the pneumoconiosis diagnostic rule scoring system. The true outcome that would have been observed had HRCT been performed was obtained with a reverse-misclassification function using diagnostic performance estimates. Best and worse-case scenarios are simulated by varying diagnostic performance parameters of CXR against HRCT within the uncertainty boundaries of 95% confidence intervals (95%CI).
 
-**Results**: A
+**Results**: Incorporation of new knowledge of the diagnostic performance of CXR against HRCT, assuming that outcome misclassification is non-differential, reveals that the AUC of the diagnostic prediction rule is underestimated when using CXR (absolute difference: 0.022 to 0.044). Using a cut-off score of 5 points results in 17.35% (224 out of 1291) of workers identified as being in the high-risk category. In all scenarios, CXR results in an overall prevalence of silicosis of 2.8% (n=36/1291), whereas screening participants in the high-risk category only results in 17 positive ILO >=1/1 cases, and an overall prevalence by CXR in the high-risk group of 7.6% (n=17/225) and 1.8% in the low-risk group (n=19/1057). In simulations incorporating point estimates for sensitivity and specificity (scenario 1), the true prevalence of silicosis with HRCT is 4.4% (n=57), of which 16 are in the high-risk category, resulting in a prevalence of 7.1% in the high-risk and 3.8% (n=41) in the low-risk group. Using the upper bound of the 95%CI of specificity and sensitivity (scenario 2), the true prevalence of silicosis with HRCT is 2.5% (n=32), of which 14 are in the high-risk group (prevalence in the high-risk group = 6.3%) and 19, low-risk (prevalence in the low-risk group = 1.8%). Lastly, using the lower bound of specificity and sensitivity, the true prevalence of silicosis by HRCT is 11.7% (n=153), of which 29 are high-risk workers (prevalence in the high-risk group = 12.9%) and 122 low-risk workers (prevalence in the low-risk group = 11.5%).
 
-**Discussion**: A
-
-**Conclusion and recommendations**: A
+**Discussion**: The diagnostic prediction rule for silicosis has been used with a higher threshold (5 points) than optimal (3.75 points in the original study), likely due to the need of minimizing the number of workers who undergo diagnostic imaging studies. Under that threshold, 17.35% of participants are identified as high risk individuals to undergo screening. Incorporating current knowledge of the diagnostic performance of CXR against HRCT reveals that there is minimal impact in the number of positive cases detected under scenarios 1 (point estimates) and 2 (best case: upper bound of 95%CI), whereas almost twice the cases in the high risk group are detected with HRCT in scenario 3 (worst case: lower bound of 95%CI). Outcome misclassification has a greater impact in workers in the low risk category in both scenarios 1 and 3, where twice and six-times the cases are detected with HRCT, respectively. Scenarios in which differential misclassification exists remain to be explored as well as those with different disease prevalence.  
 
 \pagebreak
 
@@ -72,7 +70,7 @@ pacman::p_load(
 )
 ```
 
-## Session and package dependencies
+#### Session and package dependencies
 
 ```{r}
 #| echo: false  
@@ -99,9 +97,9 @@ A diagnostic prediction model to **rule out** pneumoconiosis in construction wor
 
 ## Outcome
 
-To develop the prediction rule, the diagnosis of pneumoconiosis was defined as a chest x ray (CXR) indicative of pneumoconiosis (ILO profusion category ≥1/1), for which the ILO international classification of radiographs of pneumoconioses 2000 version was used. The most up-to-date version of this guideline is the 2022 revised edition.[@ILO2022] The ILO score is assigned upon examination of small opacities on CXR, in comparison to standardized CXR images. The range of possible values are integers between 0 and 3, which are assigned to a major category, followed by a subcategory (see [**Box 1**] for a simple example). For instance, a score of 1/0 means that 1 was assigned as the major category, while 0 (subcategory) was strongly considered as the alternative. Conversely, a score of 0/1 means that the radiologist assigned 0 as the major category, but strongly considered 1 as suitable. A score 1/1 means that the CXR is consistent with the standard CXR graded as 1 in the ILO classification report.
+To develop the prediction rule, the diagnosis of pneumoconiosis was defined as a chest x ray (CXR) indicative of pneumoconiosis (ILO profusion category >=1/1), for which the ILO international classification of radiographs of pneumoconioses 2000 version was used. The most up-to-date version of this guideline is the 2022 revised edition.[@ILO2022] The ILO score is assigned upon examination of small opacities on CXR, in comparison to standardized CXR images. The range of possible values are integers between 0 and 3, which are assigned to a major category, followed by a subcategory (see **Box 1** for a simple example). For instance, a score of 1/0 means that 1 was assigned as the major category, while 0 (subcategory) was strongly considered as the alternative. Conversely, a score of 0/1 means that the radiologist assigned 0 as the major category, but strongly considered 1 as suitable. A score 1/1 means that the CXR is consistent with the standard CXR graded as 1 in the ILO classification report.
 
-As mentioned earlier, an ILO score **≥1/1** was considered as the reference standard for pneumoconiosis to develop the diagnostic prediction rule.[@Suarthana2007] This contrasts with standard recommendations at the time mentioning that an ILO category **1/0** or higher should be considered consistent with the presence of pneumoconiosis.[@Wagner1996] This decision was made under the rationale that a 1/0 cutoff could lead to greater misclassification, resulting in more unnecessary chest x-rays. Out of the 1291 workers included for analysis, a total of 37 (2.9%) had a score ≥1/1, whereas 131 (10.1%) were graded ≥1/0.
+As mentioned earlier, an ILO score **>=1/1** was considered as the reference standard for pneumoconiosis to develop the diagnostic prediction rule.[@Suarthana2007] This contrasts with standard recommendations at the time mentioning that an ILO category **1/0** or higher should be considered consistent with the presence of pneumoconiosis.[@Wagner1996] This decision was made under the rationale that a 1/0 cutoff could lead to greater misclassification, resulting in more unnecessary chest x-rays. Out of the 1291 workers included for analysis, a total of 37 (2.9%) had a score >=1/1, whereas 131 (10.1%) were graded >=1/0.
 
 Noteworthy, three different radiologists examined the CXR and provided a score. Radiologists were **blinded** to patient characteristics, except for the fact that all participants worked on the construction industry. The median score was used for analysis.
 
@@ -124,22 +122,56 @@ The final model included five predictors:
 +----------------------------------------+-------------------------+-------------+-------------+
 | Predictor                              | Value                   | Score       | Beta        |
 +========================================+=========================+=============+=============+
-| Age                                    | ≥40 years               | 1.0         | 0.72        |
+| Age                                    | >=40 years              | 1.0         | 0.72        |
 +----------------------------------------+-------------------------+-------------+-------------+
 | Smoking habit                          | Current smoker          | 1.0         | 0.70        |
 +----------------------------------------+-------------------------+-------------+-------------+
 | Job title                              | High exposure job title | 1.5         | 1.14        |
 +----------------------------------------+-------------------------+-------------+-------------+
-| Work duration in construction industry | ≥15 years               | 1.5         | 1.00        |
+| Work duration in construction industry | >=15 years              | 1.5         | 1.00        |
 +----------------------------------------+-------------------------+-------------+-------------+
 | Self-related health                    | Feeling unhealthy       | 1.25        | 0.84        |
 +----------------------------------------+-------------------------+-------------+-------------+
 | Standardized residual FEV1             | ≤ -1.0                  | 1.25        | 0.91        |
 +----------------------------------------+-------------------------+-------------+-------------+
 
-## Area under the curve of the prediction rule
+The uncorrected AUC of the model was **0.81 (95%CI: 0.75 to 0.86)**. The corrected AUC was 0.76.
 
-The uncorrected AUC of the model was 0.81 (95%CI: 0.75 to 0.86). The corrected AUC was 0.76. A cutoff point of 3.75 is suggested as optimal, with the following classification measures:
+\pagebreak
+
+## Model Validation
+
+In the original Suarthana study,[@Suarthana2007] the prediction model was only internally validated. A formal external validation procedure was not performed as currently recommended in TRIPOD+AI guidelines.[@Collins2024]
+
+To scope for studies reporting the use of the diagnostic prediction rule and any posterior external validation studies, the citations of the diagnostic rule development model were [retreived from Google Scholar](https://scholar.google.com/scholar?cites=1797392544233043996&as_sdt=2005&sciodt=0,5&hl=es&inst=7240083048524121927) on 10/09/2024 and screened for title and abstract. Google Scholar was chosen due to its wide coverage of literature sources. A total of **59** records citing the paper were found. In comparison, other databases retrieved less results: PubMed-MEDLINE (n = 11), Web of Science (n = 22), Scopus (n = 32), semantic scholar (n = 34), and dimensions (n = 26). All documents were reviewed, including those in other languages, for which automatic translations were obtained to screen for any calculations of the probability of silicosis according to the diagnostic prediction rule. Out of **59** records citing the paper, **5 studies**[@Nicol2015; @Meijer2011; @Mets2012; @Stigter2011; @Rooijackers2016] reported having used the diagnostic prediction rule to calculate workers' risk of pneumoconiosis. These studies are summarized in the following subheadings:
+
+#### Nicol, et al.[@Nicol2015]
+
+In a case series of 6 young stonemasons from the UK who were diagnosed with silicosis after performing a high-resolution computed tomography (HRCT) (three of them with progressive massive fibrosis), the diagnostic rule was applied and all 6 cases had a probability of having silicosis of 0%.[@Nicol2015] All these 6 cases would have not been referred for further chest x-ray investigation based solely on the diagnostic prediction rule score.
+
+#### Meijer, et al.[@Meijer2011]
+
+A subset of 180 participants enrolled in the study used for the development of the diagnostic prediction rule were invited for further examination with chest HRCT, of which a total of **n=79** ultimately underwent HRCT.[@Meijer2011] Participants invited were intended to be representative of the different risk score categories of the diagnostic prediction rule. A definite diagnosis of silicosis was not made. The study reports HRCT findings for different ILO thresholds (0/0, 1/0, and >=1/1), agreement between individual HRCT features between radiologists, and associations between the cumulative exposure index to silica and HRCT findings, controlling for smoking.
+
+In participants with a normal CXR (ILO 0/0), only 34.9% had a normal HRCT. In these patients, findings suggestive of silicosis such as well-defined round opacities (8%) and parietal pleural abnormalities (24%) were frequent on HRCT. Emphysema was also frequent (41%), as well as irregular and/or linear opacities (22%).
+
+#### Mets, et al.[@Mets2012]
+
+This was a case-control study in which workers in the construction industry with a high-risk of silicosis based on the diagnostic prediction rule (score 5 or higher) were invited to undergo diagnostic workup, including chest CT, pulmonary function test, and medical examination by a pulmonologist. A total of 398 workers out of 42,150 (0.9%) were in the high risk category and invited to participate. The proportion of high-risk participants was lower than in the original Suarthana paper, possibly due to the ARBOUW database including a large fraction of administrative workers and not only construction workers. Ultimately, 54 participated as cases (high-risk), whereas controls were patients from a cancer screening cohort. The study reports micronodules found on chest CT. 
+
+#### Rooijackers, et al.[@Rooijackers2016]
+
+This is a congress abstract which also used the ARBOW database to identify high-risk participants with a threshold of 5 points in the diagnostic prediction rule. Out of 75,000 employees, 1123 (1.5%) were high-risk participants. A total of 295 workers ultimately participated and underwent chest CT. Silicosis was found in 64 workers (22%), 37 (13%) in an early stage. 
+
+#### Stigter, et al.[@Stigter2011]
+
+This is a congress abstract reporting the use of the diagnostic prediction rule to identify high-risk workers (cut-off: 5 points) in a ceramic tile prodiction plant. Out of 353 employees, 52 (15%) were in the high-risk category and underwent chest CT. Silicosis was found in 8 workers (17%). 
+
+\pagebreak
+
+## Cut-off points of the diagnostic prediction rule
+
+A cutoff point of **3.75** is suggested as optimal, with the following classification measures:
 
 |        | CXR + | CXR - |      |
 |--------|-------|-------|------|
@@ -152,34 +184,24 @@ The uncorrected AUC of the model was 0.81 (95%CI: 0.75 to 0.86). The corrected A
 -   Negative Predictive Value: 99.4%,
 -   Positive Predictive Value: 85.2%
 
-\pagebreak
+Nonetheless, a **higher cut-off point of 5** has been used in practice.[@Stigter2011; @Rooijackers2016; @Mets2012] The summary data for this exact cut-off point is not provided in the original diagnostic rule paper, so the cut-off point of **5.25** is used here to provide an impression of its classification properties reported in the original study (note that this may differ from the actual diagnostic performance characteristics):
 
-## Model Validation
+|        | CXR + | CXR - |      |
+|--------|-------|-------|------|
+| Rule + | 13    | 106   | 119  |
+| Rule - | 24    | 1148  | 1178 |
+|        | 37    | 1254  | 1291 |
 
-In the original Suarthana study,[@Suarthana2007] the prediction model was only internally validated. A formal external validation procedure was not performed as currently recommended in TRIPOD+AI guidelines.[@Collins2024]
+-   Sensitivity: 35.1%,
+-   Specificity: 91.5%,
+-   Negative Predictive Value: 98.0%,
+-   Positive Predictive Value: 10.9%
 
-To scope for studies reporting the use of the diagnostic prediction rule and any posterior external validation studies, the citations of the diagnostic rule development model were [retreived from Google Scholar](https://scholar.google.com/scholar?cites=1797392544233043996&as_sdt=2005&sciodt=0,5&hl=es&inst=7240083048524121927) on 10/09/2024 and screened for title and abstract. Google Scholar was chosen due to its wide coverage of literature sources. A total of **59** records citing the paper were found. In comparison, other databases retrieved less results: PubMed-MEDLINE (n = 11), Web of Science (n = 22), Scopus (n = 32), semantic scholar (n = 34), and dimensions (n = 26). All documents were reviewed, including those in other languages, for which automatic translations were obtained to screen for any calculations of the probability of silicosis according to the diagnostic prediction rule. Out of **59** records citing the paper, **5 studies**[@Nicol2015; @Meijer2011; @Mets2012; @Stigter2011; @Rooijackers2016] reported having used the diagnostic prediction rule to calculate workers' risk of pneumoconiosis. These studies are summarized in the following subheadings:
-
-### Nicol, et al.[@Nicol2015]
-
-In a case series of 6 young stonemasons from the UK who were diagnosed with silicosis after performing a high-resolution computed tomography (HRCT) (three of them with progressive massive fibrosis), the diagnostic rule was applied and all 6 cases had a probability of having silicosis of 0%.[@Nicol2015] All these 6 cases would have not been referred for further chest x-ray investigation based solely on the diagnostic prediction rule score.
-
-### Meijer, et al.[@Meijer2011]
-
-A subset of 180 participants enrolled in the study used for the development of the diagnostic prediction rule were invited for further examination with chest HRCT, of which a total of **n=79** ultimately underwent HRCT.[@Meijer2011] Participants invited were intended to be representative of the different risk score categories of the diagnostic prediction rule. A definite diagnosis of silicosis was not made. The study reports HRCT findings for different ILO thresholds (0/0, 1/0, and ≥1/1), agreement between individual HRCT features between radiologists, and associations between the cumulative exposure index to silica and HRCT findings, controlling for smoking.
-
-In participants with a normal CXR (ILO 0/0), only 34.9% had a normal HRCT. In these patients, findings suggestive of silicosis such as well-defined round opacities (8%) and parietal pleural abnormalities (24%) were frequent on HRCT. Emphysema was also frequent (41%), as well as irregular and/or linear opacities (22%).
-
-### 
+The decision to use a higher cut-off point than the optimal is likely due to the large number of individuals that should undergo CXR with a 3.75 cut-off (43.9%) vs 5.25 (9.2%).
 
 \pagebreak
 
-# Misclassification error of chest X-Ray
-
-## CXR based on Meijer, et al.[@Meijer2011]
-
-A subset of 180 participants enrolled in the study used for the development of the diagnostic prediction rule were invited for further examination with chest high resolution computed tomography (HRCT), of which a total of **n=79** participants underwent HRCT.[@Meijer2011] However, a final diagnosis of silicosis was not made based on HRCT and consensus by radiologists, and the study limited to report HRCT findings with their frequencies among different ILO thresholds.
-
+# Misclassification of chest X-Ray vs HRCT
 
 ## CXR based on ILO 1/1 cut-off from Hoy, et al.[@Hoy2024]
 
@@ -237,7 +259,7 @@ cat("Diagnostic Odds Ratio:", round(DOR,2), "\n")
 
 Corrected ROC curve analysis of prediction models can be done by taking into account misclassification error for binary outcomes, provided that disease prevalence and misclassification rates are known.[@Zawistowski2017] Zawistowski, et al. simulate the value of the true outcome and then introduce different misclassification rates to understand the impact of misclassification on the prediction models' AUC.
 
-In the case of the diagnostic prediction rule, we do not know the value of the true outcome, which would have been determined with HRCT. Instead, the diagnostic prediction rule used CXR as the reference test, which means that only the value of the misclassified outcome is know. Zawistowski's[@Zawistowski2017] procedure can be adapted to obtain the reverse-misclassified outcome instead, by using the information from Hoy, et al.[@Hoy2024], which would allow to estimate what the diagnostic rule AUC would have been had HRCT been used instead of CXR. The original functions, as well as the adapted reverse-misclassification function are found in the following script which is sourced into this document:
+In the case of the diagnostic prediction rule, we do not know the value of the true outcome, which would have been determined with HRCT. Instead, the diagnostic prediction rule used CXR as the reference test, which means that only the value of the misclassified outcome is know. Zawistowski's[@Zawistowski2017] procedure can be adapted to obtain the reverse-misclassified outcome instead, by using the information from Hoy, et al.[@Hoy2024] to estimate what the diagnostic rule AUC would have been had HRCT been used instead of CXR. The original functions, as well as the adapted reverse-misclassification function are found in the following script which is sourced into this document:
 
 ```{r}
 #| echo: true
@@ -246,7 +268,7 @@ source("scripts/Zawistowski_misclassification_functions.R")
 
 ```{r}
 #| echo: true
-#| eval: true
+#| eval: false
 source("scripts/Diagnostic_rule_AUC_misclassification.R")
 ```
 
@@ -254,29 +276,27 @@ Note that these simulations assume that outcome misclassification is non-differe
 
 ## Results
 
-Simulated data with a sample size of 1300 participants is used to replicate samples with a similar size as the original diagnostic rule development study, by using the summary data reported in the paper and assigning the outcome based on the outcome probability from the diagnostic rule equation. A total of 5000 different samples are drawn to perform estimations of the potential impact of misclassification from the diagnostic prediction rule. Furthermore, scores for every fictitious participant are calculated based on the diagnostic prediction rule scoring system and a cut-off value of 5 is used to classify on high-risk () and low-risk () of silicosis, since this is the cut-off value that has been used in practice.[] 
+Simulated data with a sample size of 1291 participants is used to replicate samples with a similar size as the original diagnostic rule development study, by using the summary data reported in the paper and assigning the outcome based on the outcome probability from the diagnostic rule equation. A total of 5000 different samples are drawn to perform estimations of the potential impact of misclassification from the diagnostic prediction rule. Furthermore, scores for every fictitious participant are calculated based on the diagnostic prediction rule scoring system and a cut-off value of 5 is used to classify on high-risk (>=5 points) and low-risk (\<5) of silicosis, since this is the cut-off value that has been used in practice.[@Stigter2011; @Rooijackers2016]
+
+\pagebreak
 
 ### Scenario 1: Point estimates from Hoy, et al.[@Hoy2024]
 
-In the first scenario, point estimate values derived from Hoy, et al.[@Hoy2024] are used: 
+In the first scenario, point estimate values derived from Hoy, et al.[@Hoy2024] are used:
 
--   Sensitivity (%): 57.5 
--   Specificity (%): 97.1 
--   False Positive Rate (%): 2.9 
--   False Negative Rate (%): 42.5 
+-   Sensitivity (%): 57.5
+-   Specificity (%): 97.1
+-   False Positive Rate (%): 2.9
+-   False Negative Rate (%): 42.5
 
+The distribution of low risk and high risk participants is as follows:
 
-ROC Curve analysis  
 ```{r}
 ROC_results <- read.csv(file.path(tabfolder, "ROC_results_scenario_1.csv"))
 
 columns <- c(
-  "sum_outcome_observed",
-  "sum_outcome_true",
-  "sum_high_risk_observed",
-  "sum_low_risk_observed",
-  "sum_high_risk_true",
-  "sum_low_risk_true"
+  "sum_low_risk",
+  "sum_high_risk"
   )
 
 # Summary statistics function 
@@ -291,12 +311,10 @@ summary_stats <- function(column) {
   )
 }
 
-
 table_results <- data.frame(
-  Characteristic = c(
-    "Silicosis (CXR)","Silicosis (HRCT)","Silicosis (CXR) | high-risk",
-    "Silicosis (CXR) | low-risk","Silicosis (HRCT) | high-risk",
-    "Silicosis (HRCT) | low-risk"
+  Risk = c(
+    "Low (<5 points)",
+    "High (>=5 points)"
     ),
   t(sapply(columns, summary_stats))
 ) %>% 
@@ -305,47 +323,8 @@ table_results <- data.frame(
 table_results %>% gt()
 ```
 
+The following table shows the distribution of outcome occurrence:
 
-```{r}
-columns <- c(
-  "ROC_observed_outcome", 
-  "ROC_observed_corrected", 
-  "ROC_true"
-  )
-
-# Summary statistics 
-summary_stats <- function(column) {
-  c(
-    Mean = round(mean(ROC_results[[column]]), 3),
-    Median = round(median(ROC_results[[column]]), 3),
-    P = round(quantile(ROC_results[[column]], 0.25), 3),
-    P = round(quantile(ROC_results[[column]], 0.75), 3),
-    Min = round(min(ROC_results[[column]]), 3),
-    Max = round(max(ROC_results[[column]]), 3)
-  )
-}
-
-table_results <- data.frame(
-  Outcome = c("CXR", "CXR-corrected", "HRCT"),
-  t(sapply(columns, summary_stats))
-)
-
-table_results %>% gt()
-```
-
-```{r}
-bias_absolute <- table_results$Mean[1] - table_results$Mean[2]
-
-cat("Absolute difference in AUC (CXR):", bias_absolute, "\n") 
-```
-
-```{r}
-bias_absolute <- table_results$Mean[1] - table_results$Mean[3]
-
-cat("Absolute difference in AUC (HRCT):", bias_absolute, "\n") 
-```
-
-Risk score categories 
 ```{r}
 columns <- c(
   "sum_outcome_observed",
@@ -369,6 +348,195 @@ table_results <- data.frame(
 table_results %>% gt()
 ```
 
+ROC curve analysis:
+
+```{r}
+columns <- c(
+  "ROC_observed_outcome", 
+  "ROC_observed_corrected"
+  )
+
+table_results <- data.frame(
+  Outcome = c("CXR", "CXR-corrected"),
+  t(sapply(columns, summary_stats))
+)
+
+table_results %>% gt()
+```
+
+```{r}
+bias_absolute <- abs(table_results$Mean[1] - table_results$Mean[2])
+
+cat("Absolute difference in AUC (CXR-corrected):", bias_absolute, "\n") 
+```
+
+\pagebreak
+
+### Scenario 2: Good diagnostic performance
+
+For this scenario, a good diagnostic performance of CXR compared to HRCT is assumed, by using the upper boundary of 95%CI for sensitivity and specificity:
+
+-   Sensitivity (%): 72.6
+-   Specificity (%): 99.5
+-   False Positive Rate (%): 0.5
+-   False Negative Rate (%): 27.4
+
+The distribution of low risk and high risk participants is as follows:
+
+```{r}
+ROC_results <- read.csv(file.path(tabfolder, "ROC_results_scenario_2.csv"))
+
+columns <- c(
+  "sum_low_risk",
+  "sum_high_risk"
+  )
+
+table_results <- data.frame(
+  Risk = c(
+    "Low (<5 points)",
+    "High (>=5 points)"
+    ),
+  t(sapply(columns, summary_stats))
+) %>% 
+  select(-Mean)
+
+table_results %>% gt()
+```
+
+The following table shows the distribution of outcome occurrence:
+
+```{r}
+columns <- c(
+  "sum_outcome_observed",
+  "sum_outcome_true",
+  "sum_high_risk_observed",
+  "sum_low_risk_observed",
+  "sum_high_risk_true",
+  "sum_low_risk_true"
+  )
+
+table_results <- data.frame(
+  Characteristic = c(
+    "Silicosis (CXR)","Silicosis (HRCT)","Silicosis (CXR) | high-risk",
+    "Silicosis (CXR) | low-risk","Silicosis (HRCT) | high-risk",
+    "Silicosis (HRCT) | low-risk"
+    ),
+  t(sapply(columns, summary_stats))
+) %>% 
+  select(-Mean)
+
+table_results %>% gt()
+```
+
+ROC curve analysis:
+
+```{r}
+columns <- c(
+  "ROC_observed_outcome", 
+  "ROC_observed_corrected"
+  )
+
+table_results <- data.frame(
+  Outcome = c("CXR", "CXR-corrected"),
+  t(sapply(columns, summary_stats))
+)
+
+table_results %>% gt()
+```
+
+```{r}
+bias_absolute <- abs(table_results$Mean[1] - table_results$Mean[2])
+
+cat("Absolute difference in AUC (CXR-corrected):", bias_absolute, "\n") 
+```
+
+\pagebreak
+
+### Scenario 3: Poor diagnostic performance
+
+For this scenario, a poor diagnostic performance of CXR compared to HRCT is assumed, by using the lower boundary of 95%CI for sensitivity and specificity:
+
+-   Sensitivity (%): 41
+-   Specificity (%): 89.1
+-   False Positive Rate (%): 10.9
+-   False Negative Rate (%): 59
+
+The distribution of low risk and high risk participants is as follows:
+
+```{r}
+ROC_results <- read.csv(file.path(tabfolder, "ROC_results_scenario_3.csv"))
+
+columns <- c(
+  "sum_low_risk",
+  "sum_high_risk"
+  )
+
+table_results <- data.frame(
+  Risk = c(
+    "Low (<5 points)",
+    "High (>=5 points)"
+    ),
+  t(sapply(columns, summary_stats))
+) %>% 
+  select(-Mean)
+
+table_results %>% gt()
+```
+
+The following table shows the distribution of outcome occurrence:
+
+```{r}
+columns <- c(
+  "sum_outcome_observed",
+  "sum_outcome_true",
+  "sum_high_risk_observed",
+  "sum_low_risk_observed",
+  "sum_high_risk_true",
+  "sum_low_risk_true"
+  )
+
+table_results <- data.frame(
+  Characteristic = c(
+    "Silicosis (CXR)","Silicosis (HRCT)","Silicosis (CXR) | high-risk",
+    "Silicosis (CXR) | low-risk","Silicosis (HRCT) | high-risk",
+    "Silicosis (HRCT) | low-risk"
+    ),
+  t(sapply(columns, summary_stats))
+) %>% 
+  select(-Mean)
+
+table_results %>% gt()
+```
+
+ROC curve analysis:
+
+```{r}
+columns <- c(
+  "ROC_observed_outcome", 
+  "ROC_observed_corrected"
+  )
+
+table_results <- data.frame(
+  Outcome = c("CXR", "CXR-corrected"),
+  t(sapply(columns, summary_stats))
+)
+
+table_results %>% gt()
+```
+
+```{r}
+bias_absolute <- abs(table_results$Mean[1] - table_results$Mean[2])
+
+cat("Absolute difference in AUC (CXR-corrected):", bias_absolute, "\n") 
+```
+
+\pagebreak
+
+# Differential outcome misclassification
+
+Prior analyses assumed that outcome misclassification is non-differential. However, differential outcome misclassification is conceivable. The sources and mechanisms of differential misclassification are summarized in a mind-map ([link to resource - in progress)](https://mm.tt/app/map/3433596501?t=S3mwy4V8Vu)). Here, the focus is on how the main candidate predictors of the diagnostic prediction model could have led to differential outcome misclassification through a mechanism that systematically increases the FPR with the probability of being a case and/or increases the FNR with the probability of being a control, as these are the two mechanisms that could have led AUC overestimation in the original diagnostic rule development study. Only **age** and **smoking** are thought to potentially lead to differential outcome misclassification through plausible mechanisms, because radiologists were blinded to participant characteristics, thereby blocking the sources of differential outcome misclassification for the other predictors.
+
+... Work in progress ...
 
 \pagebreak
 
@@ -393,10 +561,6 @@ table_results %>% gt()
 |                                                                                                                                                                                                                                                                                                                                                                           |
 | On the contrary, radiologist number 2 (R2) is convinced that semi-sweet chocolate (ILO 1) is the right choice as soon as they see the shelve and does not even consider other options. Thus, the final score for R2 is **1/1**.                                                                                                                                           |
 +---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
-
-\pagebreak
-
-#### Other
 
 \pagebreak
 
