--- a/R/Silicosis_diagnostic_rule.qmd
+++ b/R/Silicosis_diagnostic_rule.qmd
@@ -122,17 +122,17 @@ The final model included five predictors:
 +----------------------------------------+-------------------------+-------------+-------------+
 | Predictor                              | Value                   | Score       | Beta        |
 +========================================+=========================+=============+=============+
-| Age                                    | >=40 years              | 1.0         | 0.72        |
+| Age                                    | greater/equal 40 years  | 1.0         | 0.72        |
 +----------------------------------------+-------------------------+-------------+-------------+
 | Smoking habit                          | Current smoker          | 1.0         | 0.70        |
 +----------------------------------------+-------------------------+-------------+-------------+
 | Job title                              | High exposure job title | 1.5         | 1.14        |
 +----------------------------------------+-------------------------+-------------+-------------+
-| Work duration in construction industry | >=15 years              | 1.5         | 1.00        |
+| Work duration in construction industry | greater/equal 15 years  | 1.5         | 1.00        |
 +----------------------------------------+-------------------------+-------------+-------------+
 | Self-related health                    | Feeling unhealthy       | 1.25        | 0.84        |
 +----------------------------------------+-------------------------+-------------+-------------+
-| Standardized residual FEV1             | ≤ -1.0                  | 1.25        | 0.91        |
+| Standardized residual FEV1             | lower/equal -1.0        | 1.25        | 0.91        |
 +----------------------------------------+-------------------------+-------------+-------------+
 
 The uncorrected AUC of the model was **0.81 (95%CI: 0.75 to 0.86)**. The corrected AUC was 0.76.
